# font-burndown-chart-generator

./: .gitignore  CHANGELOG.md  CONTRIBUTORS.txt  README.md  burndown-chart-generator.py  burndown.example.toml  pyproject.toml  requirements.in  requirements.txt
.github/workflows/: lint.yml
src/burndown_chart_generator/: __main__.py  glyph_types_generator.py
typings/fontTools/: __init__.pyi
typings/fontTools/designspaceLib/: __init__.pyi  split.pyi  statNames.pyi  types.pyi
typings/fontTools/misc/: __init__.pyi  etree.pyi  loggingTools.pyi  roundTools.pyi  textTools.pyi
typings/fontTools/misc/plistlib/: __init__.pyi
typings/fontTools/varLib/: errors.pyi  models.pyi
typings/matplotlib/: __init__.pyi  _afm.pyi  _blocking_input.pyi  _cm.pyi  _constrained_layout.pyi  _docstring.pyi  _enums.pyi  _fontconfig_pattern.pyi  _layoutgrid.pyi  _mathtext.pyi  _pylab_helpers.pyi  _text_helpers.pyi  _tight_bbox.pyi  _tight_layout.pyi  artist.pyi  axis.pyi  backend_bases.pyi  backend_managers.pyi  backend_tools.pyi  bezier.pyi  category.pyi  cm.pyi  collections.pyi  colorbar.pyi  colors.pyi  container.pyi  contour.pyi  dates.pyi  dviread.pyi  figure.pyi  font_manager.pyi  gridspec.pyi  hatch.pyi  image.pyi  layout_engine.pyi  legend.pyi  legend_handler.pyi  lines.pyi  markers.pyi  mathtext.pyi  (+20 more)
typings/matplotlib/_api/: __init__.pyi  deprecation.pyi
typings/matplotlib/axes/: __init__.pyi  _axes.pyi  _base.pyi  _secondary_axes.pyi
typings/matplotlib/backends/: backend_agg.pyi  backend_webagg.pyi  backend_webagg_core.pyi
typings/matplotlib/cbook/: __init__.pyi
typings/matplotlib/projections/: __init__.pyi  geo.pyi  polar.pyi
typings/matplotlib/style/: core.pyi
typings/matplotlib/tri/: __init__.pyi  _triangulation.pyi  _tricontour.pyi  _trifinder.pyi  _triinterpolate.pyi  _tripcolor.pyi  _triplot.pyi  _trirefine.pyi  _tritools.pyi
