[build-system]
requires = ["setuptools>=61.2", "setuptools_scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "burndown-chart-generator"
authors = [{ name = "Dalton Maag Ltd", email = "sd@daltonmaag.com" }]
license = { text = "Apache-2.0" }
description = "A burndown chart generator for font projects, based on color marks"
requires-python = ">=3.10"
dependencies = [
    "attrs>=23.1",
    "cattrs>=23.1",
    "fontTools",
    "matplotlib",
    "pyyaml",
    "toml",
    "ufoLib2",
]
dynamic = ["version"]
readme = "README.md"

[project.urls]
Repository = "https://github.com/googlefonts/font-burndown-chart-generator"

[project.scripts]
burndown-chart-generator = "burndown_chart_generator.__main__:clap"

[tool.setuptools_scm]
write_to = "src/burndown_chart_generator/_version.py"

[tool.pyright]
include = ["src"]
exclude = ["**/__pycache__"]

reportUnknownMemberType = false

pythonPlatform = "Linux"

# https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html#isort
[tool.isort]
profile = "black"
known_first_party = "burndown_chart_generator"

[tool.pylint.messages_control]
disable = "all"
enable = "F, E, unreachable, duplicate-key, unnecessary-semicolon, global-variable-not-assigned, unused-variable, binary-op-exception, bad-format-string, anomalous-backslash-in-string, bad-open-mode, unused-import"

[tool.pylint.format]
max-line-length = "88"

[tool.ruff]
ignore = ["E501"]
